--- a/estilos/style.css
+++ b/estilos/style.css
@@ -16,10 +16,10 @@
 
 :root {
   --fundo-principal: #f5f5f5;
-  --texto: #222222;
+  --texto: #290000;
   --texto-inverso: #ffffff;
-  --destaque: #0077ff;
-  --destaque-inverso: #66bbff;
+  --destaque: #673632;
+  --destaque-inverso: #804943;
   --fundo-card: #ffffff;
 }
 
